--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+  youtube_player_flutter: ^8.1.2
   english_words: ^4.0.0
+  video_player: ^2.1.6
   provider: ^6.0.0
+  webview_flutter_android: ^3.4.3
 
 dev_dependencies:
   flutter_test:
