--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   video_player: ^2.1.6
   provider: ^6.0.0
   webview_flutter_android: ^3.4.3
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
